# pgpcodingchallenge

./: CMakeLists.txt  Main.qml  README.md  SPECS.md  ValueTracker.qml  backend_1.json  backend_3.json  backend_5.json  configloader.cpp  configloader.h  contextpropertylookup.cpp  contextpropertylookup.h  frontend.json  main.cpp  resources.qrc  signalemitter.cpp  signalemitter.h
